[gd_scene load_steps=7 format=2]

[ext_resource path="res://demos/hud_demo/Counter3.tscn" type="PackedScene" id=1]
[ext_resource path="res://demos/hud_demo/HUD.gd" type="Script" id=2]
[ext_resource path="res://demos/hud_demo/Counter1.tscn" type="PackedScene" id=3]
[ext_resource path="res://demos/hud_demo/Counter2.tscn" type="PackedScene" id=4]
[ext_resource path="res://demos/hud_demo/Bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://demos/hud_demo/Counter5.tscn" type="PackedScene" id=6]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 1020.0
offset_bottom = 73.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_right = 1000.0
offset_bottom = 53.0
size_flags_horizontal = 3

[node name="Bars" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
offset_right = 584.0
offset_bottom = 53.0
size_flags_horizontal = 3

[node name="Bar" parent="MarginContainer/HBoxContainer/Bars" instance=ExtResource( 5 )]
offset_right = 584.0

[node name="Counter" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
offset_left = 588.0
offset_right = 688.0

[node name="Counter2" parent="MarginContainer/HBoxContainer" instance=ExtResource( 4 )]
offset_left = 692.0
offset_right = 792.0

[node name="Counter3" parent="MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
offset_left = 796.0
offset_right = 896.0

[node name="Counter4" parent="MarginContainer/HBoxContainer" instance=ExtResource( 6 )]
offset_left = 900.0
offset_right = 1000.0
